code/rosmod_v3/src/grammar/02-Hardware/ROSMOD_HardwareParser.py
# Generated from java-escape by ANTLR 4.4
from __future__ import print_function
from antlr4 import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from .ROSMOD_HardwareListener import ROSMOD_HardwareListener
else:
    from ROSMOD_HardwareListener import ROSMOD_HardwareListener

class ROSMOD_HardwareParser ( Parser ):

    grammarFileName = "java-escape"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    EOF = Token.EOF
    T__5=1
    T__4=2
    T__3=3
    T__2=4
    T__1=5
    T__0=6
    ID=7
    WS=8
    COMMENT=9
    LINE_COMMENT=10

    tokenNames = [ u"<INVALID>", u"'hardware'", u"'{'", u"'arch'", u"'='", 
                   u"'}'", u"';'", u"ID", u"WS", u"COMMENT", u"LINE_COMMENT" ]

    RULE_start = 0
    RULE_name = 1
    RULE_arch = 2
    RULE_hardware = 3

    ruleNames =  [ u"start", u"name", u"arch", u"hardware" ]

    def __init__(self, input):
        super(ROSMOD_HardwareParser, self).__init__(input)
        self.checkVersion("4.4")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSMOD_HardwareParser.StartContext, self).__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ROSMOD_HardwareParser.EOF, 0)

        def hardware(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMOD_HardwareParser.HardwareContext)
            else:
                return self.getTypedRuleContext(ROSMOD_HardwareParser.HardwareContext,i)


        def getRuleIndex(self):
            return ROSMOD_HardwareParser.RULE_start

        def enterRule(self, listener):
            if isinstance( listener, ROSMOD_HardwareListener ):
                listener.enterStart(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSMOD_HardwareListener ):
                listener.exitStart(self)




    def start(self):

        localctx = ROSMOD_HardwareParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 11
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ROSMOD_HardwareParser.T__5:
                self.state = 8 
                self.hardware()
                self.state = 13
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 14
            self.match(self.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NameContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSMOD_HardwareParser.NameContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ROSMOD_HardwareParser.ID, 0)

        def getRuleIndex(self):
            return ROSMOD_HardwareParser.RULE_name

        def enterRule(self, listener):
            if isinstance( listener, ROSMOD_HardwareListener ):
                listener.enterName(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSMOD_HardwareListener ):
                listener.exitName(self)




    def name(self):

        localctx = ROSMOD_HardwareParser.NameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 16
            self.match(self.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArchContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSMOD_HardwareParser.ArchContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ROSMOD_HardwareParser.ID, 0)

        def getRuleIndex(self):
            return ROSMOD_HardwareParser.RULE_arch

        def enterRule(self, listener):
            if isinstance( listener, ROSMOD_HardwareListener ):
                listener.enterArch(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSMOD_HardwareListener ):
                listener.exitArch(self)




    def arch(self):

        localctx = ROSMOD_HardwareParser.ArchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_arch)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 18
            self.match(self.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class HardwareContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSMOD_HardwareParser.HardwareContext, self).__init__(parent, invokingState)
            self.parser = parser

        def arch(self):
            return self.getTypedRuleContext(ROSMOD_HardwareParser.ArchContext,0)


        def name(self):
            return self.getTypedRuleContext(ROSMOD_HardwareParser.NameContext,0)


        def getRuleIndex(self):
            return ROSMOD_HardwareParser.RULE_hardware

        def enterRule(self, listener):
            if isinstance( listener, ROSMOD_HardwareListener ):
                listener.enterHardware(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSMOD_HardwareListener ):
                listener.exitHardware(self)




    def hardware(self):

        localctx = ROSMOD_HardwareParser.HardwareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_hardware)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            self.match(self.T__5)
            self.state = 21 
            self.name()
            self.state = 22
            self.match(self.T__4)

            self.state = 23
            self.match(self.T__3)
            self.state = 24
            self.match(self.T__2)
            self.state = 25 
            self.arch()
            self.state = 26
            self.match(self.T__0)
            self.state = 28
            self.match(self.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx




